cleanup, a test on frequency sweeps, since this didn't go anywhere I'm going to write the readtable() func in firmware

--- a/testing/tests.ipynb
+++ b/testing/tests.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -102,20 +102,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'pll_mult': 4,\n",
-       " 0: {'freq': 0.0, 'phase': 0.0, 'amp': 1},\n",
-       " 1: {'freq': 0.0, 'phase': 0.0, 'amp': 1},\n",
-       " 2: {'freq': 0.0, 'phase': 0.0, 'amp': 1},\n",
-       " 3: {'freq': 0.0, 'phase': 0.0, 'amp': 1}}"
+       "{'pll_mult': 1,\n",
+       " 0: {'freq': 45019890.88021219,\n",
+       "  'phase': 158.5546875,\n",
+       "  'amp': 0.11730205278592376},\n",
+       " 1: {'freq': 45019890.88021219,\n",
+       "  'phase': 158.5546875,\n",
+       "  'amp': 0.11730205278592376},\n",
+       " 2: {'freq': 45019890.88021219,\n",
+       "  'phase': 158.5546875,\n",
+       "  'amp': 0.11730205278592376},\n",
+       " 3: {'freq': 45019890.88021219,\n",
+       "  'phase': 158.5546875,\n",
+       "  'amp': 0.11730205278592376}}"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -167,7 +175,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "def parser(register_dict):\n",
+    "    \"\"\"\n",
+    "    Handler for readregs function to print in human readable form\n",
+    "    \"\"\"\n",
+    "\n",
+    "    for key in register_dict:\n",
+    "        if type(key) == int:\n",
+    "            print('Channel', key, register_dict[key])\n",
+    "        else:\n",
+    "            print(key, register_dict[key])\n",
+    "    \n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "pll_mult 1\n",
+      "Channel 0 {'freq': 45019890.88021219, 'phase': 158.5546875, 'amp': 0.11730205278592376}\n",
+      "Channel 1 {'freq': 45019890.88021219, 'phase': 158.5546875, 'amp': 0.11730205278592376}\n",
+      "Channel 2 {'freq': 45019890.88021219, 'phase': 158.5546875, 'amp': 0.11730205278592376}\n",
+      "Channel 3 {'freq': 45019890.88021219, 'phase': 158.5546875, 'amp': 0.11730205278592376}\n",
+      "None\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(parser(readregs()))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -201,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -262,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -271,7 +322,7 @@
        "27"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -323,16 +374,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'Amp:     1.000000\\nok\\n'"
+       "'ok\\n'"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -366,16 +417,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'Amp:     1.000000\\nok\\n'"
+       "'ok\\n'"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -409,12 +460,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### seti"
+    "### Tuning word helper functions"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -447,7 +498,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -456,7 +507,7 @@
        "'ok\\n'"
       ]
      },
-     "execution_count": 101,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -464,6 +515,13 @@
    "source": [
     "send('abort')\n",
     "send('reset')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### testing mode 0 (Single Stepping)"
    ]
   },
   {
@@ -486,7 +544,7 @@
        "'ok\\n'"
       ]
      },
-     "execution_count": 102,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -557,7 +615,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -566,7 +624,7 @@
        "'1\\n'"
       ]
      },
-     "execution_count": 103,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -577,7 +635,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -586,7 +644,7 @@
        "'2\\n'"
       ]
      },
-     "execution_count": 119,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -597,7 +655,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -606,39 +664,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "z = np.array(f1, dtype = np.uint32)\n",
-    "x = np.array(1023, dtype = np.uint16)\n",
-    "y = np.array(90, dtype = np.uint16)\n",
-    "\n",
-    "# print(z.nbytes)\n",
-    "# print(x.nbytes)\n",
-    "# print(y.nbytes)\n",
-    "# print(len(example_instructions))\n",
-    "# print(len(instructions_bytes))\n",
-    "# print(example_instructions.nbytes)\n",
-    "# print(instructions_bytes)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 123,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'ok\\n'"
-      ]
-     },
-     "execution_count": 123,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
     "send('abort')\n",
     "send('reset')"
@@ -646,35 +674,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "ready for 68 bytes\n",
-      "\n",
-      "sent 68 bytes\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "'ok\\n'"
-      ]
-     },
-     "execution_count": 124,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "my_instrument.write(':DISPlay:ANNotation:TEXT \"Testing setb\"')\n",
     "my_instrument.write(':TIMebase:DELay 20.0E-06')\n",
     "my_instrument.write(':TIMebase:SCALe 20.0E-06')\n",
     "\n",
-    "send('debug on')\n",
+    "\n",
+    "# send('debug on')\n",
     "\n",
     "dt = np.dtype([('start frequency', np.uint32), ('stop frequency', np.uint32),\n",
     "               ('delta', np.int32), ('rate', np.int8), ('time', np.uint32)])\n",
@@ -707,7 +716,7 @@
     "\"\"\"\n",
     ")\n",
     "\n",
-    "response = send(f'setb 0 %d' % len(example_instructions))\n",
+    "response = send(f'setb 0 {len(example_instructions)}\\n')\n",
     "print(response)\n",
     "\n",
     "send(f'setb {instructions_bytes}')\n",
@@ -716,8 +725,19 @@
     "    \n",
     "print(f'sent {example_instructions.nbytes} bytes')\n",
     "\n",
-    "send(f'set 4 {len(example_instructions)}')\n",
+    "send(f'set 4 %d\\n' % len(example_instructions))\n",
     "send('start')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "numtriggers = send('numtriggers')\n",
+    "print(numtriggers)\n",
+    "print(int(numtriggers) == len(example_instructions))"
    ]
   },
   {
@@ -740,18 +760,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Table Programmed, Executing\n",
-      "Table Executed successfully\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "my_instrument.write(':TIMebase:DELay 20.0E-06')\n",
     "my_instrument.write(':TIMebase:SCALe 10.0E-09')\n",
@@ -799,18 +810,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Table Programmed, Executing\n",
-      "Table Executed successfully\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "my_instrument.write(':DISPlay:ANNotation:TEXT \"Testing Mode 0b: Single Stepping Amplitude\"')\n",
     "\n",
@@ -856,18 +858,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Table Programmed, Executing\n",
-      "Table Executed successfully\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "my_instrument.write(':DISPlay:ANNotation:TEXT \"Testing Mode 0c: Single Stepping Phase\"')\n",
     "\n",
@@ -914,17 +907,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Table run from non-volatile memory successfully\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "my_instrument.write(':DISPlay:ANNotation:TEXT \"Testing Table Save and Load\"')\n",
     "\n",
@@ -961,17 +946,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Success\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "my_instrument.write(':DISPlay:ANNotation:TEXT \"Testing Mode 1\"')\n",
     "my_instrument.write(':TIMebase:DELay 35.0E-06')\n",
@@ -1018,7 +995,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1079,17 +1056,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Success\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "my_instrument.write(':DISPlay:ANNotation:TEXT \"Testing Mode 2: Frequency Sweep\"')\n",
     "my_instrument.write(':TIMebase:DELay 40.0E-06')\n",
@@ -1157,20 +1126,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'ok\\nok\\nok\\n6\\nok\\n6\\nok\\n6\\nok\\n6\\nok\\n6\\nok\\n6\\nok\\n2\\nok\\nok\\n'"
-      ]
-     },
-     "execution_count": 26,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "send(\n",
     "f\"\"\"abort\n",
@@ -1204,17 +1162,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Success\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "my_instrument.write(':DISPlay:ANNotation:TEXT \"Testing Mode 3: Phase Sweep\"')\n",
     "my_instrument.write(':TIMebase:DELay 35.0E-06')\n",
@@ -1349,20 +1299,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'ok\\n'"
-      ]
-     },
-     "execution_count": 29,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "send('abort')\n",
     "send('reset')"
@@ -1372,15 +1311,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Success\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "my_instrument.write(':DISPlay:ANNotation:TEXT \"Testing set Mode 4: Amplitude Sweep, Single Step Freq, Phase\"')\n",
     "my_instrument.write(':TIMebase:DELay 70.0E-06')\n",
@@ -1437,20 +1368,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'ok\\n'"
-      ]
-     },
-     "execution_count": 31,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "send('reset')"
    ]
@@ -1526,15 +1446,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Success\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# my_instrument.write(':DISPlay:ANNotation:TEXT \"Testing Mode 5: Frequency Sweep, Single Step Amp, Phase\"')\n",
     "\n",
@@ -1609,7 +1521,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1768,18 +1680,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'ok\\nok\\n9\\nok\\n9\\nok\\n9\\nok\\n9\\nok\\n9\\nok\\n9\\nok\\n9\\nok\\n9\\nok\\n2\\nok\\nok\\n'"
-      ]
-     },
-     "execution_count": 41,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "my_instrument.write(':DISPlay:ANNotation:TEXT \"Testing seti Mode 6: Phase Sweep, Single Step Amp, Freq\"')\n",
     "\n",
@@ -1820,7 +1721,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
