final bit of notebook cleanup to move setb commands fully out of original notebook. set and seti remain in the original

--- a/testing/tests.ipynb
+++ b/testing/tests.ipynb
@@ -493,257 +493,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### setb"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'ok\\n'"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "send('abort')\n",
-    "send('reset')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### testing mode 0 (Single Stepping)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "ready for 48 bytes\n",
-      "\n",
-      "sent 48 bytes\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "'ok\\n'"
-      ]
-     },
-     "execution_count": 31,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "my_instrument.write(':DISPlay:ANNotation:TEXT \"Testing setb\"')\n",
-    "my_instrument.write(':TIMebase:DELay 20.0E-06')\n",
-    "my_instrument.write(':TIMebase:SCALe 20.0E-06')\n",
-    "\n",
-    "send('debug on')\n",
-    "\n",
-    "dt = np.dtype([('frequency', np.uint32), ('amplitude', np.uint16), ('phase', np.uint16), ('time', np.uint32)])\n",
-    "# dt = np.dtype([('frequency', np.uint32), ('amplitude', np.uint16), ('phase', np.uint16)])\n",
-    "\n",
-    "f1 = get_ftw(freq_out = 100 * MHZ)\n",
-    "f2 = get_ftw(freq_out = 120 * MHZ)\n",
-    "f3 = get_ftw(freq_out = 110 * MHZ)\n",
-    "\n",
-    "p1 = get_pow(phase = 90)\n",
-    "p2 = get_pow(phase = 180)\n",
-    "p3 = get_pow(phase = 270)\n",
-    "\n",
-    "t = 1\n",
-    "\n",
-    "# example_instructions = np.array([\n",
-    "#                                 (f1, 1023, p1),\n",
-    "#                                 (f2, 800, p2),\n",
-    "#                                 (f3, 1023, p3)\n",
-    "#                                  ]\n",
-    "#                                  , dtype = dt)\n",
-    "\n",
-    "example_instructions = np.array([\n",
-    "                                (f2, 600, p1, t),\n",
-    "                                (f2, 800, p1, t),\n",
-    "                                (f2, 1023, p1, t),\n",
-    "                                (f2, 800, p1, t)\n",
-    "                                 ]\n",
-    "                                 , dtype = dt)\n",
-    "\n",
-    "\n",
-    "instructions_bytes = example_instructions.tobytes()\n",
-    "# instructions_bytes\n",
-    "\n",
-    "# np.frombuffer(instructions_bytes, dtype = dt)\n",
-    "\n",
-    "my_instrument.write(':DISPlay:ANNotation:TEXT \"Testing setb\"')\n",
-    "num_instructions = example_instructions.size\n",
-    "\n",
-    "send(\n",
-    "f\"\"\"abort\n",
-    "mode 0 1\n",
-    "setchannels 1\n",
-    "\"\"\"\n",
-    ")\n",
-    "\n",
-    "response = send(f'setb 0 %d' % len(example_instructions))\n",
-    "print(response)\n",
-    "\n",
-    "send(f'setb {instructions_bytes}')\n",
-    "if not response.startswith('ready'):\n",
-    "    print(f'error, got response: {response}')\n",
-    "    \n",
-    "print(f'sent {example_instructions.nbytes} bytes')\n",
-    "\n",
-    "send(f'set 4 {len(example_instructions)}')\n",
-    "send('start')\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 32,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'1\\n'"
-      ]
-     },
-     "execution_count": 32,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "send('status')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 33,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'2\\n'"
-      ]
-     },
-     "execution_count": 33,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "send('numtriggers')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# example_instructions"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "send('abort')\n",
-    "send('reset')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "my_instrument.write(':DISPlay:ANNotation:TEXT \"Testing setb\"')\n",
-    "my_instrument.write(':TIMebase:DELay 20.0E-06')\n",
-    "my_instrument.write(':TIMebase:SCALe 20.0E-06')\n",
-    "\n",
-    "\n",
-    "# send('debug on')\n",
-    "\n",
-    "dt = np.dtype([('start frequency', np.uint32), ('stop frequency', np.uint32),\n",
-    "               ('delta', np.int32), ('rate', np.int8), ('time', np.uint32)])\n",
-    "\n",
-    "f1 = get_ftw(freq_out = 100 * MHZ)\n",
-    "f2 = get_ftw(freq_out = 120 * MHZ)\n",
-    "f3 = get_ftw(freq_out = 110 * MHZ)\n",
-    "\n",
-    "d = 10\n",
-    "r = 1\n",
-    "t = 1\n",
-    "\n",
-    "example_instructions = np.array([\n",
-    "                                (f2, f1, d, r, t),\n",
-    "                                (f1, f2, d, r, t),\n",
-    "                                (f2, f3, d, r, t),\n",
-    "                                (f3, f1, d, r, t)\n",
-    "                                 ]\n",
-    "                                 , dtype = dt)\n",
-    "\n",
-    "\n",
-    "instructions_bytes = example_instructions.tobytes()\n",
-    "\n",
-    "num_instructions = example_instructions.size\n",
-    "\n",
-    "send(\n",
-    "f\"\"\"abort\n",
-    "mode 2 1\n",
-    "setchannels 1\n",
-    "\"\"\"\n",
-    ")\n",
-    "\n",
-    "response = send(f'setb 0 {len(example_instructions)}\\n')\n",
-    "print(response)\n",
-    "\n",
-    "send(f'setb {instructions_bytes}')\n",
-    "if not response.startswith('ready'):\n",
-    "    print(f'error, got response: {response}')\n",
-    "    \n",
-    "print(f'sent {example_instructions.nbytes} bytes')\n",
-    "\n",
-    "send(f'set 4 %d\\n' % len(example_instructions))\n",
-    "send('start')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "numtriggers = send('numtriggers')\n",
-    "print(numtriggers)\n",
-    "print(int(numtriggers) == len(example_instructions))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "## Test Mode 0: Single Stepping Table Mode\n",
     "\n",
     "Program a 2000 step table that single steps from 10 MHz to 100 MHz over the course of 2 seconds.\n",
@@ -1716,7 +1465,14 @@
     "seti 4 4\n",
     "start\n",
     "\"\"\"\n",
-    ")"
+    ")\n",
+    "\n",
+    "time.sleep(1)\n",
+    "if SAVE_IMAGES == True:\n",
+    "    my_instrument.save_screenshot(filename)\n",
+    "\n",
+    "if SHOW_IMAGES == True:\n",
+    "    display(Image(filename))"
    ]
   },
   {
