switching binary tests to class based approach for readability and similarity to labscript. beginning to test new setclock commands and channel mirroring

--- a/testing/tests.ipynb
+++ b/testing/tests.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# send('program')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,17 +84,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Serial Communication Successful\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "assert send('reset')    == 'ok\\n'\n",
     "assert send('status')   == '0\\n'\n",
@@ -102,32 +103,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'pll_mult': 1,\n",
-       " 0: {'freq': 45019890.88021219,\n",
-       "  'phase': 158.5546875,\n",
-       "  'amp': 0.11730205278592376},\n",
-       " 1: {'freq': 45019890.88021219,\n",
-       "  'phase': 158.5546875,\n",
-       "  'amp': 0.11730205278592376},\n",
-       " 2: {'freq': 45019890.88021219,\n",
-       "  'phase': 158.5546875,\n",
-       "  'amp': 0.11730205278592376},\n",
-       " 3: {'freq': 45019890.88021219,\n",
-       "  'phase': 158.5546875,\n",
-       "  'amp': 0.11730205278592376}}"
-      ]
-     },
-     "execution_count": 34,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Helper for reading register values and putting them in a dictionary\n",
     "# takes in the frequency of the reference clock, assuming default of 125 MHz\n",
@@ -170,7 +148,7 @@
     "    return ad9959\n",
     "\n",
     "\n",
-    "readregs()\n"
+    "readregs()"
    ]
   },
   {
@@ -179,7 +157,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "def parser(register_dict):\n",
     "    \"\"\"\n",
     "    Handler for readregs function to print in human readable form\n",
@@ -189,46 +166,23 @@
     "        if type(key) == int:\n",
     "            print('Channel', key, register_dict[key])\n",
     "        else:\n",
-    "            print(key, register_dict[key])\n",
-    "    \n",
-    "\n"
+    "            print(key, register_dict[key])\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "pll_mult 1\n",
-      "Channel 0 {'freq': 45019890.88021219, 'phase': 158.5546875, 'amp': 0.11730205278592376}\n",
-      "Channel 1 {'freq': 45019890.88021219, 'phase': 158.5546875, 'amp': 0.11730205278592376}\n",
-      "Channel 2 {'freq': 45019890.88021219, 'phase': 158.5546875, 'amp': 0.11730205278592376}\n",
-      "Channel 3 {'freq': 45019890.88021219, 'phase': 158.5546875, 'amp': 0.11730205278592376}\n",
-      "None\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(parser(readregs()))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Register Readback Successful\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "assert send('reset') == 'ok\\n', 'Could not run \"reset\" command'\n",
     "ad9959 = readregs()\n",
@@ -252,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -301,6 +255,15 @@
     "    def set_time_scale(self, time):\n",
     "        self.write(f':TIMebase:SCALe {time}')\n",
     "\n",
+    "    def annotate_screen(self, message):\n",
+    "        pass\n",
+    "\n",
+    "    def set_math_x_scale(self, x_value):\n",
+    "        pass\n",
+    "\n",
+    "    def set_math_offset(self, y_offset):\n",
+    "        pass\n",
+    "\n",
     "my_instrument = KeysightScope()"
    ]
   },
@@ -313,20 +276,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "27"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# my_instrument.query('*LRN?')\n",
     "# my_instrument.query('TIMebase:MODE?')\n",
@@ -362,6 +314,39 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Tuning word helper functions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## slightly different logic than the ad9959.c funcs due to python vs c\n",
+    "def get_ftw(freq_out: float, freq_sys: float = 500 * MHZ):\n",
+    "\n",
+    "    ftw = (freq_out / freq_sys) * 2**32\n",
+    "    \n",
+    "    return(int(ftw))\n",
+    "\n",
+    "def get_pow(phase: float):\n",
+    "    \n",
+    "    pow = round(phase / 360 * (2**14 - 1))\n",
+    "\n",
+    "    return pow\n",
+    "\n",
+    "def get_asf(amp: float):\n",
+    "    \n",
+    "    asf = round(amp * 1024)\n",
+    "\n",
+    "    return asf"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Manual Testing"
    ]
   },
@@ -374,20 +359,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'ok\\n'"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "## source\n",
     "freq0 = 125 * MHZ # source freq > ref freq\n",
@@ -417,20 +391,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'ok\\n'"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# send(f\"\"\"\n",
     "#      abort\n",
@@ -460,33 +423,98 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Tuning word helper functions"
+    "### Channel Mirroring Test"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "## slightly different logic than the ad9959.c funcs due to python vs c\n",
-    "def get_ftw(freq_out: float, freq_sys: float = 125 * MHZ):\n",
+    "send('reset')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "freq0 = 100 * MHZ\n",
+    "amp0 = 1\n",
     "\n",
-    "    ftw = (freq_out / freq_sys) * 2**32\n",
-    "    \n",
-    "    return(int(ftw))\n",
+    "send('setchannels 20')\n",
+    "send(f'setfreq 0 {freq0}')\n",
+    "send(f'setamp 0 {amp0}')\n",
+    "# my_instrument.save_screenshot('mirrortest0.png')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "freq1 = 90 * MHZ\n",
+    "amp1 = .7\n",
     "\n",
-    "def get_pow(phase: float):\n",
-    "    \n",
-    "    pow = round(phase / 360 * (2**14 - 1))\n",
+    "# send(f'setfreq 1 {freq1}')\n",
+    "send(f'setamp 1 {amp1}')\n",
     "\n",
-    "    return pow\n",
-    "\n",
-    "def get_asf(amp: float):\n",
-    "    \n",
-    "    asf = round(amp * 1024)\n",
-    "\n",
-    "    return asf"
+    "# my_instrument.save_screenshot('mirrortest1.png')\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### `clkstatus` and `setclk`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# send('clkstatus')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# send(f'setclock 0 {120 * MHZ} 1')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# send('clkstatus')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# readregs()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# send(f'setclock 1 {120 * MHZ}')"
    ]
   },
   {
@@ -546,8 +574,7 @@
     "else:\n",
     "    time.sleep(totalTime)\n",
     "assert send('numtriggers') == f'{steps}\\n', 'Wrong number of triggers processed'\n",
-    "print('Table Executed successfully')\n",
-    "\n"
+    "print('Table Executed successfully')"
    ]
   },
   {
@@ -703,7 +730,7 @@
     "my_instrument.write(':TIMebase:DELay 35.0E-06')\n",
     "my_instrument.write(':TIMebase:SCALe 10.0E-06')\n",
     "\n",
-    "send('reset')\n",
+    "# send('reset')\n",
     "\n",
     "filename = 'mode1-picostart-ampsweep-test.png'\n",
     "\n",
@@ -921,7 +948,9 @@
     "\n",
     "my_instrument.write(':FUNCtion:OFFSet +650E-03')\n",
     "my_instrument.write(':FUNCtion:SCALe +500E-03')\n",
-    "send('reset')\n",
+    "\n",
+    "## sometimes phase sweeps need a reset before to work correctly, but not to be run every time\n",
+    "# send('reset') \n",
     "\n",
     "filename = 'mode3-phasesweep-test.png'\n",
     "\n",
@@ -1052,8 +1081,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "send('abort')\n",
-    "send('reset')"
+    "# send('abort')\n",
+    "# send('reset')"
    ]
   },
   {
@@ -1197,18 +1226,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# my_instrument.write(':DISPlay:ANNotation:TEXT \"Testing Mode 5: Frequency Sweep, Single Step Amp, Phase\"')\n",
+    "send('reset')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "my_instrument.write(':DISPlay:ANNotation:TEXT \"Testing Mode 5: Frequency Sweep, Single Step Amp, Phase\"')\n",
     "\n",
-    "# my_instrument.write(':TIMebase:DELay 90.0E-06')\n",
-    "# my_instrument.write(':TIMebase:SCALe 20.0E-06')\n",
+    "my_instrument.write(':TIMebase:DELay 200.0E-06')\n",
+    "my_instrument.write(':TIMebase:SCALe 50.0E-06')\n",
     "\n",
-    "# my_instrument.write(':FUNCtion:OFFSet +0.50E-00')\n",
-    "# my_instrument.write(':FUNCtion:SCALe +1.00E-00')\n",
-    "# send('reset')\n",
-    "\n",
-    "# f1 = 112e6\n",
-    "# f2 = 115e6\n",
-    "# f3 = 118e6\n",
+    "my_instrument.write(':FUNCtion:OFFSet +0.50E-00')\n",
+    "my_instrument.write(':FUNCtion:SCALe +1.00E-00')\n",
     "\n",
     "f1 = 120e6\n",
     "f2 = 90e6\n",
@@ -1276,7 +1309,7 @@
    "source": [
     "my_instrument.write(':DISPlay:ANNotation:TEXT \"Testing seti Mode 5: Frequency Sweep, Single Step Amp, Phase\"')\n",
     "\n",
-    "my_instrument.write(':TIMebase:DELay 45.0E-06')\n",
+    "my_instrument.write(':TIMebase:DELay 80.0E-06')\n",
     "my_instrument.write(':TIMebase:SCALe 20.0E-06')\n",
     "\n",
     "my_instrument.write(':FUNCtion:OFFSet +1.50E-00')\n",
@@ -1362,6 +1395,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "send('reset')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "my_instrument.write(':DISPlay:ANNotation:TEXT \"Testing Mode 6: Phase Sweep, Single Step Amp, Freq\"')\n",
     "\n",
     "my_instrument.write(':TIMebase:DELay 150.0E-06')\n",
@@ -1410,6 +1452,58 @@
     "\"\"\"\n",
     ")\n",
     "\n",
+    "# # channel mirroring test\n",
+    "# ## set Channel Address Start Stop Delta Amp Freq Time\n",
+    "# send(\n",
+    "# f\"\"\"abort\n",
+    "# mode 6 1\n",
+    "# setchannels 0\n",
+    "# set 0 1 90 180 {d} {f125} 1.00 {t * 2}\n",
+    "# set 0 2 180 270 {d} {f125} 1.00 {t * 2}\n",
+    "# set 0 3 270 360 {d} {f125} 1.00 {t * 2}\n",
+    "# set 0 4 360 270 {d} {f125} 1.00 {t * 2}\n",
+    "# set 0 5 270 180 {d} {f125} 1.00 {t * 2}\n",
+    "# set 0 6 180 270 {d} {f125} 1.00 {t * 2}\n",
+    "# set 0 7 270 180 {d} {f125} 1.00 {t * 2}\n",
+    "# set 0 8 180 90 {d} {f125} 1.00 {t * 2}\n",
+    "# set 0 9 90 0 {d} {f125} 1.00 {t * 10}\n",
+    "# set 4 10\n",
+    "# start\n",
+    "# \"\"\"\n",
+    "# )\n",
+    "# ## set Channel Address Start Stop Delta Amp Freq Time\n",
+    "# send(\n",
+    "# f\"\"\"abort\n",
+    "# mode 6 1\n",
+    "# setchannels 2\n",
+    "# set 0 0 90 {d} {f125} 1.00 {t * 2}\n",
+    "# set 0 1 90 180 {d} {f125} 1.00 {t * 2}\n",
+    "# set 0 2 180 270 {d} {f125} 1.00 {t * 2}\n",
+    "# set 0 3 270 360 {d} {f125} 1.00 {t * 2}\n",
+    "# set 0 4 360 270 {d} {f125} 1.00 {t * 2}\n",
+    "# set 0 5 270 180 {d} {f125} 1.00 {t * 2}\n",
+    "# set 0 6 180 270 {d} {f125} 1.00 {t * 2}\n",
+    "# set 0 7 270 180 {d} {f125} 1.00 {t * 2}\n",
+    "# set 0 8 180 90 {d} {f125} 1.00 {t * 2}\n",
+    "# set 0 9 90 0 {d} {f125} 1.00 {t * 10}\n",
+    "# set 1 0 90 {d} {f125} 1.00 {t * 2}\n",
+    "# set 1 1 90 180 {d} {f125} 1.00 {t * 2}\n",
+    "# set 1 2 180 270 {d} {f125} 1.00 {t * 2}\n",
+    "# set 1 3 270 360 {d} {f125} 1.00 {t * 2}\n",
+    "# set 1 4 360 270 {d} {f125} 1.00 {t * 2}\n",
+    "# set 1 5 270 180 {d} {f125} 1.00 {t * 2}\n",
+    "# set 1 6 180 270 {d} {f125} 1.00 {t * 2}\n",
+    "# set 1 7 270 180 {d} {f125} 1.00 {t * 2}\n",
+    "# set 1 8 180 90 {d} {f125} 1.00 {t * 2}\n",
+    "# set 1 9 90 0 {d} {f125} 1.00 {t * 10}\n",
+    "# set 4 10\n",
+    "# start\n",
+    "# \"\"\"\n",
+    "# )\n",
+    "\n",
+    "\n",
+    "SAVE_IMAGES = False\n",
+    "\n",
     "time.sleep(1)\n",
     "if SAVE_IMAGES == True:\n",
     "    my_instrument.save_screenshot(filename)\n",
@@ -1454,6 +1548,7 @@
     "send(\n",
     "f\"\"\"abort\n",
     "mode 6 1\n",
+    "setchannels 2\n",
     "seti 0 0 0 0 {d} 1 {f120} 1023 {t} \n",
     "seti 0 1 0 0 {d} 1 {f120} 700 {t} \n",
     "seti 0 2 0 0 {d} 1 {f120} 600 {t} \n",
