table output (I think) but it seems to be off -- investigating endianness swap, correctness of ftw calc, and offset

--- a/testing/binary-tests.ipynb
+++ b/testing/binary-tests.ipynb
@@ -37,6 +37,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# conn.write(b'program\\n')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "class KeysightScope:\n",
     "    \"\"\"\n",
     "    Helper class using pyvisa for a USB connected Keysight Oscilloscope \n",
@@ -87,13 +96,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "class Binary_Routines():\n",
     "    def __init__(self):\n",
     "        self.mirror_channels = False\n",
+    "\n",
+    "    def catch_response(self):\n",
+    "        resp = conn.readline().decode().strip()\n",
+    "        return resp\n",
     "\n",
     "    def assert_OK(self):\n",
     "        resp = conn.readline().decode().strip()\n",
@@ -140,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -200,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -240,15 +253,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "dt = np.dtype([('frequency', np.uint32), ('amplitude', np.uint16), ('phase', np.uint16), ('time', np.uint32)])\n",
-    "\n",
+    "# dt = np.dtype([('frequency', np.uint32), ('amplitude', np.uint16), ('phase', np.uint16), ('time', np.uint32)])\n",
+    "dt = np.dtype([\n",
+    "    ('frequency', '>u4'),  # Big-endian uint32\n",
+    "    ('amplitude', '>u2'),  # Big-endian uint16\n",
+    "    ('phase', '>u2'),      # Big-endian uint16\n",
+    "    ('time', '>u4')        # Big-endian uint32\n",
+    "])\n",
     "f1 = get_ftw(freq_out = 100 * MHZ)\n",
     "f2 = get_ftw(freq_out = 120 * MHZ)\n",
     "f3 = get_ftw(freq_out = 110 * MHZ)\n",
+    "\n",
+    "a1 = 1023\n",
+    "a2 = 500\n",
     "\n",
     "p1 = get_pow(phase = 90)\n",
     "p2 = get_pow(phase = 180)\n",
@@ -257,27 +278,22 @@
     "t = 1\n",
     "\n",
     "step_instructions = np.array([\n",
-    "                                (f2, 1023, p1, t),\n",
-    "                                (f2, 800, p1, t),\n",
-    "                                (f2, 1023, p1, t),\n",
-    "                                (f2, 200, p1, t),\n",
-    "                                (f2, 800, p1, t),\n",
-    "                                (f2, 1023, p1, t),\n",
-    "                                (f2, 200, p1, t),\n",
-    "                                (f2, 800, p1, t),\n",
-    "                                (f2, 1023, p1, t),\n",
-    "                                (f2, 800, p1, t)\n",
+    "                                # (f2, 1023, p1, t),\n",
+    "                                # (f2, 800, p1, t),\n",
+    "                                # (f2, 1023, p1, t),\n",
+    "                                # (f2, 200, p1, t),\n",
+    "                                # (f2, 800, p1, t),\n",
+    "                                # (f2, 1023, p1, t),\n",
+    "                                # (f2, 200, p1, t),\n",
+    "                                # (f2, 800, p1, t),\n",
+    "                                # (f2, 1023, p1, t),\n",
+    "                                # (f2, 800, p1, t)\n",
+    "                                (f2, a1, p1, t),\n",
+    "                                (f3, a2, p1, t),\n",
+    "                                (f1, a1, p1, t),\n",
+    "                                (f3, a1, p1, t),\n",
     "                                 ]\n",
     "                                 , dtype = dt)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "single_step_test = Binary_Routines()"
    ]
   },
   {
@@ -289,8 +305,36 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "b'3d70a3d703ff1000000000013851eb8501f41000000000013333333303ff1000000000013851eb8503ff100000000001'\n"
+     ]
+    }
+   ],
+   "source": [
+    "step_bytes = step_instructions.tobytes()\n",
+    "import binascii\n",
+    "print(binascii.hexlify(step_bytes))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "single_step_test = Binary_Routines()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "sending commands to 1 channels\n",
-      "Got response: ready for 120 bytes\n",
+      "Got response: ready for 48 bytes\n",
       "\n",
       "table written to memory\n",
       "table end command sent\n",
@@ -299,11 +343,120 @@
     }
    ],
    "source": [
+    "# single_step_test.catch_response()\n",
     "single_step_test.set_mode(sweep_mode=0, timing_mode=1, num_channels=1)\n",
     "single_step_test.allocate(start_address=0, instructions=step_instructions)\n",
     "single_step_test.table_to_memory(instructions=step_instructions)\n",
     "single_step_test.end_table(instructions=step_instructions)\n",
-    "single_step_test.start_routine()\n"
+    "\n",
+    "single_step_test.start_routine()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Binary_Routine_Test.catch_response()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "10"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "conn.write(b'readtable\\n')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# conn.write(b'program\\n')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Instruction Table Dump:\n",
+      "Raw bytes for instruction 0: F2 04 D7 A3 70 3D 05 00 10 06 00 13 03 01 00\n",
+      "Instruction format: F2 04 D7 A3 | 70 3D | 05 00 | 10 06 00 13\n",
+      "Instruction 0: 4060403619 28733 1280 268828691\n",
+      "Raw bytes for instruction 1: F2 04 85 EB 51 38 05 00 10 06 00 10 01 01 00\n",
+      "Instruction format: F2 04 85 EB | 51 38 | 05 00 | 10 06 00 10\n",
+      "Instruction 1: 4060382699 20792 1280 268828688\n",
+      "Raw bytes for instruction 2: F2 04 33 33 33 33 05 00 10 06 00 13 03 01 00\n",
+      "Instruction format: F2 04 33 33 | 33 33 | 05 00 | 10 06 00 13\n",
+      "Instruction 2: 4060361523 13107 1280 268828691\n",
+      "Raw bytes for instruction 3: F2 04 85 EB 51 38 05 00 10 06 00 13 03 00 00\n",
+      "Instruction format: F2 04 85 EB | 51 38 | 05 00 | 10 06 00 13\n",
+      "Instruction 3: 4060382699 20792 1280 268828691\n",
+      "End of Instruction Table\n"
+     ]
+    }
+   ],
+   "source": [
+    "MAX_SIZE = 256\n",
+    "# for _ in range(step_instructions.shape[0] + 2): # + 2 to catch header and footer\n",
+    "for _ in range(MAX_SIZE):\n",
+    "    resp = Binary_Routine_Test.catch_response()\n",
+    "    print(resp)\n",
+    "    if \"End of\" in resp:\n",
+    "        break\n",
+    "    elif \"Cannot\" in resp:\n",
+    "        break\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4123168604"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x = get_ftw(freq_out=120 * MHZ, freq_sys=125 * MHZ)\n",
+    "len(str(x)) == len(str(4060403619)) # true\n",
+    "x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Binary_Routine_Test.catch_response()"
    ]
   },
   {
@@ -322,7 +475,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -357,24 +510,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "sending commands to 1 channels\n",
-      "Got response: ready for 170 bytes\n",
-      "\n",
-      "table written to memory\n",
-      "table end command sent\n",
-      "table executed\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "freq_sweep_test = Binary_Routines()\n",
+    "# print(freq_sweep_test.catch_response())\n",
+    "# freq_sweep_test.debug_on()\n",
     "freq_sweep_test.set_mode(sweep_mode=2, timing_mode=1, num_channels=1)\n",
     "freq_sweep_test.allocate(start_address=0, instructions=freq_sweep_table)\n",
     "freq_sweep_test.table_to_memory(instructions=freq_sweep_table)\n",
@@ -398,7 +540,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -420,18 +562,18 @@
     "\n",
     "\n",
     "channel0_instructions = np.array([\n",
-    "                                # (0, 0, d, r, t),\n",
-    "                                # (0, 0, d, r, t),\n",
-    "                                # (0, 0, d, r, t),\n",
-    "                                # (0, 0, d, r, t),\n",
-    "                                # (0, 0, d, r, t),\n",
-    "                                # (0, 0, d, r, t)\n",
-    "                                (p0, p2, d, r, t),\n",
-    "                                (p2, p1, d, r, t),\n",
-    "                                (p1, p0, d, r, t),\n",
-    "                                (p0, p1, d, r, t),\n",
-    "                                (p1, p2, d, r, t),\n",
-    "                                (p2, p0, d, r, t)\n",
+    "                                (0, 0, d, r, t),\n",
+    "                                (0, 0, d, r, t),\n",
+    "                                (0, 0, d, r, t),\n",
+    "                                (0, 0, d, r, t),\n",
+    "                                (0, 0, d, r, t),\n",
+    "                                (0, 0, d, r, t)\n",
+    "                                # (p0, p2, d, r, t),\n",
+    "                                # (p2, p1, d, r, t),\n",
+    "                                # (p1, p0, d, r, t),\n",
+    "                                # (p0, p1, d, r, t),\n",
+    "                                # (p1, p2, d, r, t),\n",
+    "                                # (p2, p0, d, r, t)\n",
     "                                 ]\n",
     "                                 , dtype = dt)\n",
     "\n",
@@ -457,22 +599,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "sending commands to 2 channels\n",
-      "Got response: ready for 132 bytes\n",
-      "\n",
-      "table written to memory\n",
-      "table end command sent\n",
-      "table executed\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "phase_sweep_test = Binary_Routines()\n",
     "phase_sweep_test.debug_on()\n",
@@ -490,7 +619,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -500,35 +636,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "sending commands to 0 channels\n",
-      "Got response: ready for 66 bytes\n",
-      "\n",
-      "table written to memory\n",
-      "table end command sent\n",
-      "table executed\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "phase_sweep_test = Binary_Routines()\n",
-    "phase_sweep_test.debug_on()\n",
-    "phase_sweep_test.set_mode(sweep_mode=3, timing_mode=1, num_channels=0)\n",
+    "# phase_sweep_test = Binary_Routines()\n",
+    "# phase_sweep_test.debug_on()\n",
+    "# phase_sweep_test.set_mode(sweep_mode=3, timing_mode=1, num_channels=0)\n",
     "\n",
-    "phase_sweep_test.allocate(start_address=0, instructions=channel0_instructions)\n",
-    "phase_sweep_test.table_to_memory(instructions=channel0_instructions)\n",
+    "# phase_sweep_test.allocate(start_address=0, instructions=channel0_instructions)\n",
+    "# phase_sweep_test.table_to_memory(instructions=channel0_instructions)\n",
     "\n",
-    "# phase_sweep_test.allocate(channel=1, instructions=channel1_instructions)\n",
-    "# phase_sweep_test.table_to_memory(instructions=channel1_instructions)\n",
+    "# # phase_sweep_test.allocate(channel=1, instructions=channel1_instructions)\n",
+    "# # phase_sweep_test.table_to_memory(instructions=channel1_instructions)\n",
     "\n",
-    "phase_sweep_test.end_table(instructions=channel0_instructions)\n",
-    "phase_sweep_test.start_routine()"
+    "# phase_sweep_test.end_table(instructions=channel0_instructions)\n",
+    "# phase_sweep_test.start_routine()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "conn.write(b'readtable\\n')\n",
+    "# phase_sweep_test.assert_OK()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Binary_Routine_Test.catch_response()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# conn.write(b'program\\n')"
    ]
   },
   {
