I see the pow in the table! so I must have the pow offset right and everything else wrong

--- a/testing/binary-tests.ipynb
+++ b/testing/binary-tests.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,13 +96,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
     "class Binary_Routines():\n",
     "    def __init__(self):\n",
     "        self.mirror_channels = False\n",
+    "        self.debug_run = True\n",
     "\n",
     "    def catch_response(self):\n",
     "        resp = conn.readline().decode().strip()\n",
@@ -123,7 +124,8 @@
     "        self.assert_OK()\n",
     "        conn.write(b'setchannels %d\\n' % num_channels)\n",
     "        self.assert_OK()\n",
-    "        print('sending commands to %d channels' % num_channels)\n",
+    "        if self.debug_run == True:\n",
+    "            print('sending commands to %d channels' % num_channels)\n",
     "\n",
     "    def allocate(self, start_address: int, instructions: np.ndarray):\n",
     "        conn.write(b'setb %d %d\\n' % (start_address, len(instructions)))\n",
@@ -131,29 +133,33 @@
     "        if not response.startswith('ready'):\n",
     "            response += ''.join([r.decode() for r in conn.readlines()])\n",
     "            raise Exception(f'setb command failed, response: {repr(response)}')\n",
-    "        print(f'Got response: {response}')\n",
+    "        if self.debug_run == True:\n",
+    "            print(f'Got response: {response}')\n",
     "\n",
     "    def table_to_memory(self, instructions: np.ndarray):\n",
     "        conn.write(instructions.tobytes())\n",
     "        self.assert_OK(), 'table not written correctly'\n",
-    "        print('table written to memory')\n",
+    "        if self.debug_run == True:\n",
+    "            print('table written to memory')\n",
     "\n",
     "    def end_table(self, instructions: np.ndarray):\n",
     "        conn.write(b'set 4 %d\\n' % len(instructions))\n",
     "        self.assert_OK(), 'table not stopped correctly'\n",
-    "        print('table end command sent')\n",
+    "        if self.debug_run == True:\n",
+    "            print('table end command sent')\n",
     "\n",
     "    def start_routine(self):\n",
     "        conn.write(b'start\\n')\n",
     "        self.assert_OK(), 'table did not start'\n",
-    "        print('table executed')\n",
+    "        if self.debug_run == True:\n",
+    "            print('table executed')\n",
     "\n",
     "Binary_Routine_Test = Binary_Routines()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -213,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -253,17 +259,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# dt = np.dtype([('frequency', np.uint32), ('amplitude', np.uint16), ('phase', np.uint16), ('time', np.uint32)])\n",
-    "dt = np.dtype([\n",
-    "    ('frequency', '>u4'),  # Big-endian uint32\n",
-    "    ('amplitude', '>u2'),  # Big-endian uint16\n",
-    "    ('phase', '>u2'),      # Big-endian uint16\n",
-    "    ('time', '>u4')        # Big-endian uint32\n",
-    "])\n",
+    "dt = np.dtype([('frequency', np.uint32), ('amplitude', np.uint16), ('phase', np.uint16), ('time', np.uint32)])\n",
+    "# dt = np.dtype([\n",
+    "#     ('frequency', '>u4'),  # Big-endian uint32\n",
+    "#     ('amplitude', '>u2'),  # Big-endian uint16\n",
+    "#     ('phase', '>u2'),      # Big-endian uint16\n",
+    "#     ('time', '>u4')        # Big-endian uint32\n",
+    "# ])\n",
     "f1 = get_ftw(freq_out = 100 * MHZ)\n",
     "f2 = get_ftw(freq_out = 120 * MHZ)\n",
     "f3 = get_ftw(freq_out = 110 * MHZ)\n",
@@ -298,26 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "b'3d70a3d703ff1000000000013851eb8501f41000000000013333333303ff1000000000013851eb8503ff100000000001'\n"
-     ]
-    }
-   ],
-   "source": [
-    "step_bytes = step_instructions.tobytes()\n",
-    "import binascii\n",
-    "print(binascii.hexlify(step_bytes))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -326,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -354,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -363,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -372,7 +359,7 @@
        "10"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -383,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -392,7 +379,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4096"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "p1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -400,18 +407,14 @@
      "output_type": "stream",
      "text": [
       "Instruction Table Dump:\n",
-      "Raw bytes for instruction 0: F2 04 D7 A3 70 3D 05 00 10 06 00 13 03 01 00\n",
-      "Instruction format: F2 04 D7 A3 | 70 3D | 05 00 | 10 06 00 13\n",
-      "Instruction 0: 4060403619 28733 1280 268828691\n",
-      "Raw bytes for instruction 1: F2 04 85 EB 51 38 05 00 10 06 00 10 01 01 00\n",
-      "Instruction format: F2 04 85 EB | 51 38 | 05 00 | 10 06 00 10\n",
-      "Instruction 1: 4060382699 20792 1280 268828688\n",
-      "Raw bytes for instruction 2: F2 04 33 33 33 33 05 00 10 06 00 13 03 01 00\n",
-      "Instruction format: F2 04 33 33 | 33 33 | 05 00 | 10 06 00 13\n",
-      "Instruction 2: 4060361523 13107 1280 268828691\n",
-      "Raw bytes for instruction 3: F2 04 85 EB 51 38 05 00 10 06 00 13 03 00 00\n",
-      "Instruction format: F2 04 85 EB | 51 38 | 05 00 | 10 06 00 13\n",
-      "Instruction 3: 4060382699 20792 1280 268828691\n",
+      "Instruction 0: 71135395 55045 4096 100668415\n",
+      "Instruction format: 04 3D 70 A3 | D7 05 | 10 00 | 06 00 13 FF\n",
+      "Instruction 1: 70799851 34053 4096 100667892\n",
+      "Instruction format: 04 38 51 EB | 85 05 | 10 00 | 06 00 11 F4\n",
+      "Instruction 2: 70464307 13061 4096 100668415\n",
+      "Instruction format: 04 33 33 33 | 33 05 | 10 00 | 06 00 13 FF\n",
+      "Instruction 3: 70799851 34053 4096 100668415\n",
+      "Instruction format: 04 38 51 EB | 85 05 | 10 00 | 06 00 13 FF\n",
       "End of Instruction Table\n"
      ]
     }
@@ -432,22 +435,11 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "4123168604"
-      ]
-     },
-     "execution_count": 19,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "x = get_ftw(freq_out=120 * MHZ, freq_sys=125 * MHZ)\n",
-    "len(str(x)) == len(str(4060403619)) # true\n",
-    "x"
+    "# x = get_ftw(freq_out=120 * MHZ, freq_sys=125 * MHZ)\n",
+    "# len(str(x)) == len(str(4060403619)) # true\n",
+    "# x"
    ]
   },
   {
