I was overcomplicating, get_instructions() called from eadtable now spits out binary block with some python handling

--- a/testing/binary-tests.ipynb
+++ b/testing/binary-tests.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -159,67 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# def assert_OK():\n",
-    "#     resp = conn.readline().decode().strip()\n",
-    "#     assert resp == 'ok', 'Expected \"ok\", received \"%s\"' % resp\n",
-    "\n",
-    "# def allocate_sendb(instructions, channel):\n",
-    "#     ## tell setb how many instructions to expect \n",
-    "#     conn.write(b'setb %d %d\\n' % (channel, len(instructions)))\n",
-    "#     response = conn.readline().decode()\n",
-    "#     if not response.startswith('ready'):\n",
-    "#         response += ''.join([r.decode() for r in conn.readlines()])\n",
-    "#         raise Exception(f'setb command failed, response: {repr(response)}')\n",
-    "#     print(f'Got response: {response}')\n",
-    "\n",
-    "# def stop_sendb(instructions):\n",
-    "#     conn.write(b'set 4 %d\\n' % len(instructions))\n",
-    "#     assert_OK(), 'table not stopped correctly'\n",
-    "#     print('table finished')\n",
-    "\n",
-    "# # def write_sendb(instructions, channel):\n",
-    "\n",
-    "# def sendb(instructions: np.ndarray, channel: int = 0, multi_channel = False) -> str:\n",
-    "#     \"\"\"Sends a table of instructions to the sweeper to be read in binary mode `setb`.\n",
-    "\n",
-    "#     Parameters\n",
-    "#     ----------\n",
-    "#     instructions : np.ndarray \n",
-    "#         the table of instructions to be processed.\n",
-    "\n",
-    "#     channel : int  \n",
-    "#         instruction channel, defaults to 0.\n",
-    "\n",
-    "#     multi_channel : bool \n",
-    "#         bool option to send commands to more than one channel and handle channel mirroring, defaults to False.\n",
-    "\n",
-    "#     \"\"\"\n",
-    "\n",
-    "#     try:\n",
-    "\n",
-    "#         allocate_sendb(instructions, channel)\n",
-    "\n",
-    "#         conn.write(instructions.tobytes())\n",
-    "#         assert_OK(), 'table not written correctly'\n",
-    "#         print('table written')\n",
-    "        \n",
-    "#         # conn.write(b'set 4 %d\\n' % len(instructions))\n",
-    "#         # assert_OK(), 'table not stopped correctly'\n",
-    "#         # print('table finished')\n",
-    "\n",
-    "#         # stop_sendb(instructions)\n",
-    "\n",
-    "#     except Exception as e:\n",
-    "#         raise e\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -259,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -281,19 +221,9 @@
     "p2 = get_pow(phase = 180)\n",
     "p3 = get_pow(phase = 270)\n",
     "\n",
-    "t = 1\n",
+    "t = 2\n",
     "\n",
     "step_instructions = np.array([\n",
-    "                                # (f2, 1023, p1, t),\n",
-    "                                # (f2, 800, p1, t),\n",
-    "                                # (f2, 1023, p1, t),\n",
-    "                                # (f2, 200, p1, t),\n",
-    "                                # (f2, 800, p1, t),\n",
-    "                                # (f2, 1023, p1, t),\n",
-    "                                # (f2, 200, p1, t),\n",
-    "                                # (f2, 800, p1, t),\n",
-    "                                # (f2, 1023, p1, t),\n",
-    "                                # (f2, 800, p1, t)\n",
     "                                (f2, a1, p1, t),\n",
     "                                (f3, a2, p1, t),\n",
     "                                (f1, a1, p1, t),\n",
@@ -304,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -313,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -341,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -350,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -359,7 +289,7 @@
        "10"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -370,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -379,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -388,7 +318,7 @@
        "4096"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -399,7 +329,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0x33333333\n",
+      "0x3d70a3d7\n",
+      "0x3851eb85\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(hex(f1))\n",
+    "print(hex(f2))\n",
+    "print(hex(f3))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0x3ff\n",
+      "0x1f4\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(hex(1023))\n",
+    "print(hex(500))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -407,14 +377,10 @@
      "output_type": "stream",
      "text": [
       "Instruction Table Dump:\n",
-      "Instruction 0: 71135395 55045 4096 100668415\n",
-      "Instruction format: 04 3D 70 A3 | D7 05 | 10 00 | 06 00 13 FF\n",
-      "Instruction 1: 70799851 34053 4096 100667892\n",
-      "Instruction format: 04 38 51 EB | 85 05 | 10 00 | 06 00 11 F4\n",
-      "Instruction 2: 70464307 13061 4096 100668415\n",
-      "Instruction format: 04 33 33 33 | 33 05 | 10 00 | 06 00 13 FF\n",
-      "Instruction 3: 70799851 34053 4096 100668415\n",
-      "Instruction format: 04 38 51 EB | 85 05 | 10 00 | 06 00 13 FF\n",
+      "Offset is: 0 ||Raw bytes for instruction 0: 3F 00 F2 04 3D 70 A3 D7 05 10 00 06 00 13 FF\n",
+      "Offset is: 15 ||Raw bytes for instruction 1: 01 00 F2 04 38 51 EB 85 05 10 00 06 00 11 F4\n",
+      "Offset is: 30 ||Raw bytes for instruction 2: 05 00 F2 04 33 33 33 33 05 10 00 06 00 13 FF\n",
+      "Offset is: 45 ||Raw bytes for instruction 3: 01 00 F2 04 38 51 EB 85 05 10 00 06 00 13 FF\n",
       "End of Instruction Table\n"
      ]
     }
@@ -433,20 +399,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "# x = get_ftw(freq_out=120 * MHZ, freq_sys=125 * MHZ)\n",
-    "# len(str(x)) == len(str(4060403619)) # true\n",
-    "# x"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "''"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "Binary_Routine_Test.catch_response()"
    ]
@@ -467,7 +433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -483,7 +449,7 @@
     "\n",
     "d = 100\n",
     "r = 1\n",
-    "t = 1\n",
+    "t = 2\n",
     "\n",
     "freq_sweep_table = np.array([\n",
     "                            (f1, f3, d, r, t),\n",
@@ -502,9 +468,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "sending commands to 1 channels\n",
+      "Got response: ready for 170 bytes\n",
+      "\n",
+      "table written to memory\n",
+      "table end command sent\n",
+      "table executed\n"
+     ]
+    }
+   ],
    "source": [
     "freq_sweep_test = Binary_Routines()\n",
     "# print(freq_sweep_test.catch_response())\n",
@@ -514,6 +493,62 @@
     "freq_sweep_test.table_to_memory(instructions=freq_sweep_table)\n",
     "freq_sweep_test.end_table(instructions=freq_sweep_table)\n",
     "freq_sweep_test.start_routine()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "10"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "conn.write(b'readtable\\n')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Instruction Table Dump:\n",
+      "Offset is: 0 ||Raw bytes for instruction 0: FF 00 F2 04 33 33 33 33 07 01 01 08 00 00 00 64 09 00 00 00 00 0A 38 51 EB 85 03 80 43 10\n",
+      "Offset is: 30 ||Raw bytes for instruction 1: FF 00 F2 04 38 51 EB 85 07 01 01 08 00 00 00 64 09 00 00 00 00 0A 3D 70 A3 D7 03 80 43 10\n",
+      "Offset is: 60 ||Raw bytes for instruction 2: 0F 00 F2 04 33 33 33 33 07 01 01 08 FF FF FF FF 09 00 00 00 64 0A 3D 70 A3 D7 03 80 43 10\n",
+      "Offset is: 90 ||Raw bytes for instruction 3: 0F 00 F2 04 33 33 33 33 07 01 01 08 00 00 00 64 09 00 00 00 00 0A 33 33 33 33 03 80 43 10\n",
+      "Offset is: 120 ||Raw bytes for instruction 4: 0F 00 F2 04 3D 70 A3 D7 07 01 01 08 00 00 00 64 09 00 00 00 00 0A 3D 70 A3 D7 03 80 43 10\n",
+      "Offset is: 150 ||Raw bytes for instruction 5: 0F 00 F2 04 38 51 EB 85 07 01 01 08 00 00 00 64 09 00 00 00 00 0A 38 51 EB 85 03 80 43 10\n",
+      "Offset is: 180 ||Raw bytes for instruction 6: 0F 00 F2 04 33 33 33 33 07 01 01 08 FF FF FF FF 09 00 00 00 64 0A 38 51 EB 85 03 80 43 10\n",
+      "Offset is: 210 ||Raw bytes for instruction 7: FF 00 F2 04 33 33 33 33 07 01 01 08 00 00 00 64 09 00 00 00 00 0A 3D 70 A3 D7 03 80 43 10\n",
+      "Offset is: 240 ||Raw bytes for instruction 8: 0F 00 F2 04 38 51 EB 85 07 01 01 08 FF FF FF FF 09 00 00 00 64 0A 3D 70 A3 D7 03 80 43 10\n",
+      "Offset is: 270 ||Raw bytes for instruction 9: 0F 00 F2 04 33 33 33 33 07 01 01 08 00 00 00 64 09 00 00 00 00 0A 33 33 33 33 03 80 43 10\n",
+      "End of Instruction Table\n"
+     ]
+    }
+   ],
+   "source": [
+    "MAX_SIZE = 256\n",
+    "# for _ in range(step_instructions.shape[0] + 2): # + 2 to catch header and footer\n",
+    "for _ in range(MAX_SIZE):\n",
+    "    resp = Binary_Routine_Test.catch_response()\n",
+    "    print(resp)\n",
+    "    if \"End of\" in resp:\n",
+    "        break\n",
+    "    elif \"Cannot\" in resp:\n",
+    "        break"
    ]
   },
   {
@@ -532,7 +567,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -591,9 +626,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "sending commands to 2 channels\n",
+      "Got response: ready for 132 bytes\n",
+      "\n",
+      "table written to memory\n",
+      "table end command sent\n",
+      "table executed\n"
+     ]
+    }
+   ],
    "source": [
     "phase_sweep_test = Binary_Routines()\n",
     "phase_sweep_test.debug_on()\n",
@@ -611,24 +659,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# #### not always necessary, just if you want to move back to tests.ipynb\n",
-    "# conn.close()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -648,9 +679,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "10"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "conn.write(b'readtable\\n')\n",
     "# phase_sweep_test.assert_OK()"
@@ -658,16 +700,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Instruction Table Dump:\n",
+      "Offset is: 0 ||Raw bytes for instruction 0: 3F 00 12 05 00 00 07 01 01 08 00 04 00 00 09 00 00 00 00 0A 00 00 00 00 03 C0 43 10 00 22 05 00 00 07 01 01 08 00 04 00 00 09 00 00 00 00 0A 00 00 00 00 03 C0 43 10\n",
+      "Offset is: 55 ||Raw bytes for instruction 1: 1F 00 12 05 00 00 07 01 01 08 00 04 00 00 09 00 00 00 00 0A 00 00 00 00 03 C0 43 10 00 22 05 00 00 07 01 01 08 00 04 00 00 09 00 00 00 00 0A 00 00 00 00 03 C0 43 10\n",
+      "Offset is: 110 ||Raw bytes for instruction 2: 0C 00 12 05 00 00 07 01 01 08 00 04 00 00 09 00 00 00 00 0A 00 00 00 00 03 C0 43 10 00 22 05 00 00 07 01 01 08 00 04 00 00 09 00 00 00 00 0A 00 00 00 00 03 C0 43 10\n",
+      "Offset is: 165 ||Raw bytes for instruction 3: AC 00 12 05 00 00 07 01 01 08 00 04 00 00 09 00 00 00 00 0A 80 00 00 00 03 C0 43 10 00 22 05 10 00 07 01 01 08 FF FF FF FF 09 00 04 00 00 0A 80 00 00 00 03 C0 43 10\n",
+      "Offset is: 220 ||Raw bytes for instruction 4: 4D 00 12 05 00 00 07 01 01 08 FF FF FF FF 09 00 04 00 00 0A 40 00 00 00 03 C0 43 10 00 22 05 00 00 07 01 01 08 00 04 00 00 09 00 00 00 00 0A 40 00 00 00 03 C0 43 10\n",
+      "Offset is: 275 ||Raw bytes for instruction 5: BF 00 12 05 10 00 07 01 01 08 00 04 00 00 09 00 00 00 00 0A 80 00 00 00 03 C0 43 10 00 22 05 00 00 07 01 01 08 FF FF FF FF 09 00 04 00 00 0A 80 00 00 00 03 C0 43 10\n",
+      "End of Instruction Table\n"
+     ]
+    }
+   ],
    "source": [
-    "Binary_Routine_Test.catch_response()\n"
+    "MAX_SIZE = 256\n",
+    "# for _ in range(step_instructions.shape[0] + 2): # + 2 to catch header and footer\n",
+    "for _ in range(MAX_SIZE):\n",
+    "    resp = Binary_Routine_Test.catch_response()\n",
+    "    print(resp)\n",
+    "    if \"End of\" in resp:\n",
+    "        break\n",
+    "    elif \"Cannot\" in resp:\n",
+    "        break"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# #### not always necessary, just if you want to move back to tests.ipynb\n",
+    "# conn.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
